src/test/deca/syntax/valid/homemade/parser/test/test_pars_val_class_decl_meth_asm.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour primary
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

class iden {
    int iden (type iden), asm ("premier test");
}