src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_intruction_inequality_expr_instance_no_inequal.deca
// Description:
//    tests de programme incorrect syntaxiquement pour instance of
//
// Resultats:
//    Ligne 11 : Erreur ( expected INEQUALITY_EXPR before "instanceof")
//    
//
// Historique:
//    cree le 04/01/2023
{
    instanceof iden;
}